Fixed each signature in the reviews to have the same font and spacing.

--- a/public/stylesheets/reviews.css
+++ b/public/stylesheets/reviews.css
@@ -27,6 +27,11 @@
   font-size: 12px;
 }
 
+.main-content .reviews-content .review-block pre {
+  font-family: 'Helvetica';
+  font-style: italic;
+}
+
 ::-webkit-scrollbar {
     width: 2px;
 }
